[package]
name = "librush"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-or-later OR GPL-3.0-or-later"

authors = ["secext2022 <secext2022@outlook.com>"]
description = "艾刷 (libRush = lib + IBus + Rust + h): 用 rust 编写的 ibus 模块, 不用 GObject (ibus module written in pure rust, without GObject) (输入法, input method)"
repository = "https://github.com/fm-elpac/librush"
keywords = ["ibus", "input-method"]
categories = ["accessibility", "api-bindings", "localization"]

[[bin]]
name="ibrus"
path="src/bin.rs"

[dependencies]
log = "^0.4.22"
serde = "^1.0.204"
serde_json = "^1.0.120"
zbus = { version = "^4.4.0", default-features = false }
arbitrary-int = "1.2.7"
bitbybit = "1.3.2"
xkeysym = "0.2.1"

env_logger = "^0.11.5"
tokio = { version = "^1.39.1", features = ["full"], optional = true }

[build-dependencies]
built = { version = "^0.7.4" }
vergen-gitcl = { version = "^1.0.0", features = ["build"] }

[features]
default = ["pmim"]
pmim = ["tokio", "zbus/tokio"]
async-io = ["zbus/async-io"]
