[package]
name = "librush"
version = "0.2.2"
edition = "2024"
license = "LGPL-2.1-or-later OR GPL-3.0-or-later"

authors = ["secext2022 <secext2022@outlook.com>"]
description = "艾刷 (libRush = lib + IBus + Rust + h): 用 rust 编写的 ibus 模块, 不用 GObject (ibus module written in pure rust, without GObject) (输入法, input method)"
repository = "https://github.com/fm-elpac/librush"
keywords = ["ibus", "input-method"]
categories = ["accessibility", "api-bindings", "localization"]

[[bin]]
name="ibrus"
path="src/bin.rs"

[dependencies]
pm-bin = "^0.1.2"

serde = "^1.0.228"
serde_json = "^1.0.149"
zbus = { version = "^5.13.2", default-features = false }
arbitrary-int = "^2.1.1"
bitbybit = "^2.0.0"
xkeysym = "^0.2.1"

tokio = { version = "^1.49.0", features = ["full"], optional = true }

[build-dependencies]
pm-bin = { version = "^0.1.2", features = ["build"] }

[features]
default = ["pmim"]
pmim = ["tokio", "zbus/tokio"]
async-io = ["zbus/async-io"]
